<resources>
    <string name="lifestyle_app_logo">Lifestyle app logo</string>
    <string name="user_info_prompt">Please provide us with some information about yourself.</string>
    <string name="user_info_directions">Click each box to update</string>
    <string name="user_info_gender">Gender</string>
    <string name="user_info_birthday">Birthday</string>
    <string name="user_info_height">Height</string>
    <string name="user_info_weight">Weight</string>
    <string name="continue_button">Continue</string>
    <string name="app_name">LifestyleApp</string>
    <string name="login_user_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="user_info_2_location">Country</string>
    <string name="user_info_2_city">City</string>
    <string name="user_info_3_picture_message">This will be your profile picture! It can be changed at any time!</string>
    <string name="picker_separator">.</string>
    <string name="weight_lbs">lbs</string>
    <string name="weight_positive">okay</string>
    <string name="weight_negative">cancel</string>
    <string name="height_negative">cancel</string>
    <string name="gender_positive">okay</string>
    <string name="gender_negative">cancel</string>
    <string name="gender_picker_gender">Gender:</string>
    <string name="goal_manager_label">Goal Manager</string>
    <string name="gm_weight_label">Weight</string>
    <string name="gm_height_label">Height</string>
    <string name="gm_goal_weight_label">Goal Weight</string>
    <string name="gm_activity_level_label">Activity Level</string>
    <string name="gm_weight_tv">N/A</string>
    <string name="gm_na">N/A ></string>
    <string name="gm_choose_goal_label">Choose Goal</string>
    <string name="gm_lose_btn">Lose Weight</string>
    <string name="gm_maintain_btn">Maintain Weight</string>
    <string name="gm_gain_btn">Gain Weight</string>
    <string name="gm_gpw">Choose Goal</string>
    <string name="gm_save_btn">Save Goal</string>
    <string name="home_module_button">Modules</string>
    <string name="home_measurements">Current Measurments</string>
    <string name="home_bmi">BMI</string>
    <string name="home_weight">Weight</string>
    <string name="home_height">Height</string>
    <string name="home_goal_weight">Goal Weight</string>
    <string name="home_bmr">BMR</string>
    <string name="home_activity">Activity Level</string>
    <string name="home_not_set">N/A</string>
    <string name="activity_level_label">Activity Level</string>
    <string name="home_calories">Calories</string>
    <string name="weather_temp_title">"Temp: "</string>
    <string name="weather_search">Search</string>
    <string name="home_steps">"Today's Steps"</string>
    <string name="swipeTurnOn_instructions">"To turn on step counter: Swipe right on box"</string>
    <string name="swipeTurnOff_instructions">"To turn off step counter: Swipe left on box"</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="activity_array">
        <item>Sedentary</item>
        <item>Active</item>
    </string-array>


</resources>