<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <TextView
        android:id="@+id/labelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_manager_label"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gm_weight_label"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/labelTextView"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/gm_height_label"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/gm_goal_weight_label"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/gm_activity_level_label"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="90dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_box"
        android:text="@string/gm_weight_tv"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="@+id/textView6"
         />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner_box"
        android:text="@string/gm_na"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <TextView
        android:id="@+id/goalWeightTextView"
        android:layout_width="90dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_box"
        android:layout_marginTop="25dp"
        android:text="@string/gm_na"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <TextView
        android:id="@+id/activityLevelTextView"
        android:layout_width="90dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_box"
        android:layout_marginTop="25dp"
        android:text="@string/gm_na"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toBottomOf="@+id/goalWeightTextView" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gm_choose_goal_label"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/loseBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gm_button"
        android:text="@string/gm_lose_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/maintainBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/gm_button"
        android:text="@string/gm_maintain_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/loseBtn" />

    <Button
        android:id="@+id/gainBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/gm_button"
        android:text="@string/gm_gain_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/maintainBtn" />

    <TextView
        android:id="@+id/goalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/gm_gpw"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/gainBtn" />

    <Button
        android:id="@+id/saveGoalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gm_save"
        android:textColor="@color/eWhite"
        android:text="@string/gm_save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/goalTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>