<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:contentDescription="@string/lifestyle_app_logo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/goat_logo_circle"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/lifestyle_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/userInfoPrompt"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:text="@string/user_info_prompt"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/userInfoClickDirections"
        android:layout_width="265dp"
        android:layout_height="33dp"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/user_info_directions"
        android:textColor="@color/userInfoSkyBlue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoPrompt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <TextView
        android:id="@+id/genderTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="360dp"
        android:text="@string/user_info_gender"
        android:textColor="@color/eWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_box"
        android:gravity="center"
        android:text="@string/user_info_gender"
        android:textColor="@color/eWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextViewLabel" />

    <TextView
        android:id="@+id/birthdayTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/user_info_birthday"
        android:textColor="@color/eWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthdayTextView"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_corner_box"
        android:gravity="center"
        android:text="@string/user_info_birthday"
        android:textColor="@color/eWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/birthdayTextViewLabel" />

    <TextView
        android:id="@+id/heightTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/user_info_height"
        android:textColor="@color/eWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_box"
        android:gravity="center"
        android:text="@string/user_info_height"
        android:textColor="@color/eWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightTextViewLabel" />


    <TextView
        android:id="@+id/weightTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:text="@string/user_info_weight"
        android:textColor="@color/eWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthdayTextView" />


    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_corner_box"
        android:gravity="center"
        android:text="@string/user_info_weight"
        android:textColor="@color/eWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/heightTextView"
        app:layout_constraintTop_toBottomOf="@id/weightTextViewLabel" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:background="@drawable/continue_button"
        android:text="@string/continue_button"
        android:textColor="@color/eWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView"
        app:layout_constraintVertical_bias="0.32999998" />


</androidx.constraintlayout.widget.ConstraintLayout>