<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/continue_button"
        android:text="@string/continue_button"
        android:textColor="@color/eWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15" />

    <ImageView
        android:id="@+id/appImageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/goat_logo_circle"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/lifestyle_app_logo"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_2_location"
        android:textColor="@color/eWhite"
        app:layout_constraintBottom_toTopOf="@+id/editTextCountry"
        app:layout_constraintStart_toStartOf="@+id/guideline15" />

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/user_info_3_who_can_see"-->
<!--        android:textColor="@color/eWhite"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editTextWhoCanSee"-->
<!--        app:layout_constraintStart_toStartOf="@+id/guideline15" />-->

    <TextView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:gravity="center_horizontal"
        android:text="@string/user_info_prompt"
        android:textColor="@color/eWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/userInfoClickDirections"
        android:layout_width="265dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/user_info_directions"
        android:textColor="@color/userInfoSkyBlue"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_box"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textColor="@color/eWhite"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/userInfoClickDirections" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_box"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/eWhite"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/userInfoClickDirections" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/eWhite"
        android:text="@string/user_info_2_city"
        app:layout_constraintBottom_toTopOf="@+id/editTextCity"
        app:layout_constraintStart_toStartOf="@+id/editTextCity" />


</androidx.constraintlayout.widget.ConstraintLayout>